# amsc-d3-triton

./: .gitignore  README.md  client.py  generate_sample_inputs.py  launch-all-gpu-models-node-pbs.sh  launch-tritonserver-pbs.sh  nugraph2_input.json  perf-analyze-all-gpu-models-node.sh  pyproject.toml  register_globus_compute_func.py  serve-all-gpu-models-node.sh  serve-models.sh  start-tritonserver-pbs-apptainer.sh  start-tritonserver.sh  sweep-gpu-models-pbs.sh  test_client.py  triton_hep_client.py  user_config_template.yaml.j2
sample_inputs/: DoubleMetricLearning.npz  README.md  higgsInteractionNet.npz  nugraph2.npz  particlenet_AK4_PT.npz  snbamsc_2dcnn_u.npz  snbamsc_2dcnn_v.npz  snbamsc_2dcnn_z.npz
